# django_learn1

./: .breakpoints  db.sqlite3  pyproject.toml  replit.nix
django_project/: settings.py  urls.py  views.py
static/: ytbdisplay.js
templates/: home.html  linkdisplay.html  linkinput.html  test_savefile.html  youtube.html  youtubelist.html
weblist/: admin.py  apps.py  dataanalyze.py  models.py  urls.py  views.py  youtube.py
weblist/migrations/: 0001_initial.py  0002_youtubelink.py  0003_auto_20221014_0731.py  0004_alter_youtubelink_timelength.py
